--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "flowbite-react": "^0.12.4",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.7.0"
