[ADD] Contact Functional

--- a/.env
+++ b/.env
@@ -4,3 +4,14 @@ REACT_APP_API_URL=http://localhost:1337/api
 
 VITE_FRONT_URL=http://localhost:5173 
 VITE_API_URL=http://localhost:1337 
+# Configuration EmailJS
+# Obtenir ces valeurs sur https://dashboard.emailjs.com/
+
+# ID du service email (section "Email Services")
+VITE_EMAILJS_SERVICE_ID=service_4zr77vb
+
+# ID du template d'email (section "Email Templates")
+VITE_EMAILJS_TEMPLATE_ID=template_8jzg1jc
+
+# Clé publique (section "Account" > "General")
+VITE_EMAILJS_PUBLIC_KEY=S15j2Leo9p1p-x7Pz
